# inverex-mvp-molec

./: .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: main.py
docs/: ablation_study_report.md  agent_c_mini_vs_full.md  agent_c_results_summary.md  agent_c_training_data.md  current_pipeline_audit.md  data_acquisition_report.md  foundation_model_mini_vs_full.md  foundation_model_results.md  foundation_model_training_data.md  meta_learning_protocol.md  personalization_gap_analysis.md  response_and_adaptation_audit.md
notebooks/: demo_e2e.py  inspect_lightgbm_personalization.ipynb
results/: EXPERIMENT_SUMMARY.md  ablation_drug_target_features.tsv  ablation_multitask_nn.tsv  ablation_multitask_nn_summary.tsv  ablation_progeny_features.tsv  ablation_progeny_summary.tsv  batch_correction_comparison.csv  batch_correction_summary.csv  batch_mode_combat_lodo.tsv  cdsdb_vs_lincs_comparison.csv  cdsdb_vs_lincs_summary.csv  chemical_embeddings_comparison.csv  class_specific_feature_importances.tsv  class_specific_lodo.tsv  combined_cv_detail.csv  combined_lodo_detail.csv  combined_pipeline_results.csv  combined_transfer_detail.csv  conformal_prediction_metrics.tsv  ctrdb_validation_gdsc2-only.csv  ctrdb_validation_gdsc2_prism.csv  ctrdb_validation_results.csv  definitive_patient_model.joblib  dose_aware_comparison.csv  dose_aware_summary.csv  drug_rankings_BRCA_BASAL_004.csv  drug_rankings_BRCA_HER2_001.csv  drug_rankings_BRCA_LUMA_002.csv  drug_rankings_BRCA_LUMB_003.csv  drug_rankings_BRCA_PIK3CA_005.csv  drug_rankings_TCGA-A1-A0SB-01.csv  drug_rankings_TCGA-A1-A0SD-01.csv  drug_rankings_TCGA-A1-A0SE-01.csv  drug_rankings_TCGA-A1-A0SF-01.csv  drug_rankings_TCGA-A1-A0SG-01.csv  drug_rankings_TCGA-A1-A0SH-01.csv  drug_rankings_TCGA-A1-A0SI-01.csv  drug_rankings_TCGA-A1-A0SJ-01.csv  (+1009 more)
scripts/: fix_gse240671.py  (+25 more)
(+177 files in other folders)
